# quickjs-libc-sandboxed

./: .gitignore  CMakeLists.txt  README.md
cmake/: GoogleBenchAndTest.cmake
demo/: main.cpp  socket_demo.cpp
include/: atom.hpp  common.hpp  context.hpp  context_state.hpp  cstring.hpp  io_resource.hpp  opaque.hpp  primordials.hpp  promise.hpp  runtime.hpp  value.hpp
include/qjsb/: cancelable.hpp  event_emitter.hpp  pin_guard.hpp
include/qjsb/modules/: socket.hpp
include/qjsb/transport/: tcp.hpp
patch/: 0001-property-access-inline-cache.patch
sandboxed-fs/: CMakeLists.txt  README.md
sandboxed-fs/include/sandboxed-fs/: vfs.hpp  vfs_backend.hpp  vfs_mem.hpp  vfs_real.hpp  vfs_types.hpp
sandboxed-fs/src/: vfs.cpp  vfs_mem.cpp  vfs_real.cpp
sandboxed-fs/tests/: CMakeLists.txt  bench_vfs.cpp  demo_bug.cpp  demo_escape.cpp  test_security.cpp  test_vfs.cpp
src/: context.cpp  primordials.cpp  promise.cpp  runtime.cpp
src/bindings/: print.cpp  socket.cpp  timers.cpp
src/modules/: socket.cpp
src/transport/: tcp.cpp
tests/: CMakeLists.txt  test_call_minimal.cpp  test_opaque.cpp  test_value.cpp
